# FantacyUI

./: .gitignore  CMakeLists.txt  FantacyUI.sln  README.md  build-vs2015.bat  build-vs2017.bat  build-vs2022.bat  startenv.bat
FantacyUI/: CMakeLists.txt  CompileConfig.h  FaString.cpp  FaString.h  FantacyUI.h  FantacyUI.vcxproj  FantacyUI.vcxproj.filters  Types.h  framework.h  pch.h
FantacyUI/Base/: Application.cpp  Application.h  Color.cpp  Color.h  Geometry.cpp  Geometry.h  Mouse.cpp  Mouse.h  Object.cpp  Object.h  String.cpp  String.h  Thread.cpp  Thread.h
FantacyUI/Render/: Bitmap.cpp  Bitmap.h  Canvas.cpp  Canvas.h  Font.cpp  Font.h
FantacyUI/Widget/: Button.cpp  Button.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Pannel.cpp  Pannel.h  TabPannel.cpp  TabPannel.h  Text.cpp  Text.h  UIBuilder.cpp  UIBuilder.h  Widget.cpp  Widget.h  WindowAttacher.cpp  WindowAttacher.h
FantacyUI/Window/: Window.cpp  Window.h  WindowBase.cpp  WindowBase.h
FantacyUI/include/: CApplication.h  PlatformDef.h
FantacyUI/include/Core/: FaByteArray.h  FaString.h  fa_string.h
FantacyUI/include/Painter/: CCanvas.h  CD3D11Bitmap.h  CD3D11Device.h  CGeometry.h  CPaintTool.h  CPainter.h  CPainterDevice.h  CPixmap.h
FantacyUI/include/Utils/: CEvent.h  CInput.h
FantacyUI/include/Widgets/: CButton.h  CImageRect.h  CLayout.h  CObject.h  CText.h  CWidget.h
FantacyUI/include/Window/: CWindow.h
FantacyUI/src/: CApplication.cpp  main copy 2.cpp  main copy.cpp  main.cpp
FantacyUI/src/Core/: FaByteArray.cpp  FaString.cpp  fa_string.cpp
FantacyUI/src/Painter/: CCanvas.cpp  CD3D11Bitmap.cpp  CD3D11Device.cpp  CGeometry.cpp  CPaintTool.cpp  CPainter.cpp  CPainterDevice.cpp  CPixmap.cpp
FantacyUI/src/Utils/: CEvent.cpp  CInput.cpp  pugixml.cpp
FantacyUI/src/Widgets/: CButton.cpp  CImageRect.cpp  CLayout.cpp  CObject.cpp  CText.cpp  CWidget.cpp
FantacyUI/src/Window/: CWindow.cpp
FramelessWindow/: CMakeLists.txt
FramelessWindow/src/: main.cpp
SimpleTestUI/: SimpleTestUI.cpp  SimpleTestUI.vcxproj  SimpleTestUI.vcxproj.filters
SimpleUIDemos/: SimpleUIDemos.cpp  SimpleUIDemos.vcxproj  SimpleUIDemos.vcxproj.filters
SimpleWindow/: CMakeLists.txt
SimpleWindow/src/: main.cpp
skiademo/: CMakeLists.txt
skiademo/src/: main.cpp
thorvgdemo/: CMakeLists.txt
thorvgdemo/src/: main.cpp
xmui/: CMakeLists.txt
xmui/Backend/: XMDirect2D.cpp  XMTgfx.cpp  XMTgfx.h
xmui/Private/: XMDelegateQueue.cpp  XMDelegateQueue.h
xmui/backend/blend2d/: XMBlend2d.cpp  XMBlend2d.h
xmui/backend/direct2d/: XMDirect2D.h
xmui/backend/tgfx/: XMTgfx.cpp
xmui/include/: XMApplication.h  XMPlatformDef.h  XMString.h
xmui/include/Core/: XMBitmap.h  XMBrush.h  XMColor.h  XMFont.h  XMGeometry.h  XMPaintDevice.h  XMPainter.h  XMPen.h
xmui/include/Event/: XMEvent.h
xmui/include/Window/: XMWindow.h
xmui/src/: XMApplication.cpp  XMString.cpp  main.cpp
xmui/src/Core/: XMBitmap.cpp  XMBrush.cpp  XMColor.cpp  XMFont.cpp  XMGeometry.cpp  XMPaintDevice.cpp  XMPen.cpp
xmui/src/Event/: XMEvent.cpp
xmui/src/Window/: XMWindow.cpp
